src/test/ui/parser/issue-59418.stderr
error: tuple index with a suffix is invalid
  --> $DIR/issue-59418.rs:5:15
   |
LL |     let b = a.1suffix;
   |               ^^^^^^^ invalid suffix `suffix`

error: aborting due to previous error

